fix: layout issues solved

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -23,10 +23,11 @@
 }
 
 header {
+    width: 100%;
     background: rgba($color: #fff, $alpha: 0.8);
     font-family: inherit;
     font-weight: 900;
-    padding: 15px 0 15px 15px;
+    padding: 10px 0 10px 10px;
 
     h1 {
         margin: 0;
