--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -1,12 +1,16 @@
 @import './global.scss';
 
 footer {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 15px;
+    padding: 10px;
+    margin: 0;
+    border: 0;
     background: rgba($color: #777, $alpha: 0.9);
     font-size: 0.8em;
+    margin-top: auto;
 
     #ft-links {
         display: flex;
