--- a/src/client/styles/global.scss
+++ b/src/client/styles/global.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500;700;900&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 html {
     margin: 0;
     padding: 0;
@@ -7,9 +11,9 @@ html {
 
     body {
         min-height: 100vh;
-        display: grid;
-        grid-template-rows: auto 1fr auto;
-        grid-template-columns: 1fr;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
         margin: 0;
         padding: 0;
         border: 0;
@@ -19,40 +23,41 @@ html {
         background-size: 50em;
         font-family: 'Noto Sans JP', sans-serif;
 
+        main {
+            width: 100%;
+        
+            h1, h2, h3 {
+                margin: 0;
+                padding: 0;
+            }
+        }
+        
+        button {
+            border: 4px solid black;
+            border-radius: 0.5em;
+            text-transform: uppercase;
+            font-weight: 900;
+            cursor: pointer;
+            font-family: inherit;
+        
+            &:hover {
+                border-style: double;
+            }
+        
+            &:active {
+                border-style: solid;
+                color: white;
+                background: black;
+            }
+        
+            &:focus {
+                outline-color: #000;
+                outline-style: dotted;
+            }
+        }
+
         @media (min-width: 1200px) {
             background-size: cover;
         }
-    }
-}
-
-main {
-    h1, h2, h3 {
-        margin: 0;
-        padding: 0;
-    }
-}
-
-button {
-    background: none;
-    border: 4px solid black;
-    border-radius: 0.5em;
-    text-transform: uppercase;
-    font-weight: 900;
-    cursor: pointer;
-    font-family: inherit;
-
-    &:hover {
-        border-style: double;
-    }
-
-    &:active {
-        border-style: solid;
-        color: white;
-        background: black;
-    }
-
-    &:focus {
-        outline-color: #000;
-        outline-style: dotted;
     }
 }
