--- a/src/client/styles/trip-info.scss
+++ b/src/client/styles/trip-info.scss
@@ -3,17 +3,19 @@
 section {
     
     &.trip-info {
+        width: 100%;
         display: flex;
         flex-direction: column;
-        margin: 10px 0 25px;
-        padding: 15px 0;
+        margin: 5px 0 25px 0;
+        padding: 0;
         background: rgba($color: #a805f3, $alpha: 0.9);
         color: #000;
         min-height: 150px;
 
         #start-prompt {
             align-self: center;
-            margin-top: 4em;
+            font-size: 0.9em;
+            margin: auto;
 
             @media (min-width: 600px) {
                 margin: 0;
@@ -92,6 +94,7 @@ section {
             align-self: center;
             max-width: 90%;
             border-radius: 0.3em;
+            margin-top: 15px;
 
             @media (min-width: 600px) {
                 max-width: 70%;
@@ -101,7 +104,7 @@ section {
             }
 
             @media (min-width: 1200px) {
-                max-width: 640px;
+                max-width: 620px;
                 margin: 0;
                 margin-left: 100px;
             }
@@ -177,7 +180,7 @@ section {
 
             @media (min-width: 1200px) {
                 display: grid;
-                max-width: 800px;
+                max-width: 600px;
                 grid-template-columns: auto;
                 grid-template-rows: repeat(2, auto);
                 font-size: 2.2em;
@@ -189,6 +192,7 @@ section {
 
         #disclaimer {
             align-self: center;
+            margin-bottom: 15px;
 
             @media (min-width: 600px) {
                 grid-area: disc;
@@ -212,7 +216,7 @@ section {
 
         @media (min-width: 1200px) {
             grid-template-columns: repeat(2, auto);
-            grid-template-rows: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr) auto;
             grid-template-areas: 
             "tp img"
             "dw img"
